Fixed responsive layout bug

--- a/src/main/resources/static/css/order-page-styling.css
+++ b/src/main/resources/static/css/order-page-styling.css
@@ -1,6 +1,7 @@
-main {
+/* main {
 	height: 100vh;
 }
+*/
 .order-section {
 	min-height: 50%;
 	display: flex;
