--- a/src/main/resources/static/css/promotion-section-styling.css
+++ b/src/main/resources/static/css/promotion-section-styling.css
@@ -1,4 +1,8 @@
 /* Section spacing */
+main {
+	height: auto;
+}
+
 .promotion-section {
 	padding: 30px 0;
 	width: 100%;
